# hyprnote

./: Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: cli_cd.yaml  desktop_ci.yaml  stt_e2e.yaml
apps/api/: Cargo.toml  openapi.gen.json
apps/api/src/: main.rs  openapi.rs
apps/cli/: Cargo.toml
apps/cli/npm/: README.md  package.json
apps/cli/src/: calendar_sync.rs  cli.rs  main.rs  theme.rs
apps/cli/src/commands/: desktop.rs  mod.rs  record.rs
apps/cli/src/commands/batch/: mod.rs  runtime.rs
apps/cli/src/commands/chat/: mod.rs
apps/cli/src/commands/chat/ui/: transcript.rs
apps/cli/src/commands/connect/: app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/commands/debug/: exp.rs
apps/cli/src/commands/debug/transcribe/: audio.rs  mod.rs
apps/cli/src/commands/entry/: action.rs  effect.rs  mod.rs
apps/cli/src/commands/entry/app/: commands.rs  mod.rs  search.rs
apps/cli/src/commands/entry/ui/: mod.rs
apps/cli/src/commands/listen/: app.rs  mod.rs
apps/cli/src/commands/model/: mod.rs  runtime.rs
apps/cli/src/commands/sessions/: mod.rs  ui.rs
apps/cli/src/commands/sessions/view/: action.rs  app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/commands/timeline/: action.rs  app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/commands/transcribe/: mod.rs
apps/cli/src/config/: settings.rs
apps/cli/src/stt/: config.rs  mod.rs
apps/cli/src/widgets/: centered_dialog.rs  mod.rs  transcript.rs
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/ai/: auth-fetch.ts  index.tsx
apps/desktop/src/ai/hooks/: useLLMConnection.ts
apps/desktop/src/calendar/: hooks.ts
apps/desktop/src/calendar/components/: calendar-selection.tsx  calendar-view.tsx  context.tsx  session-chip.tsx  shared.tsx  sidebar.tsx
apps/desktop/src/chat/components/: chat-panel.tsx  content.tsx  context-bar.tsx
apps/desktop/src/chat/tools/: index.ts  search-sessions.ts
apps/desktop/src/contexts/: notifications.tsx
apps/desktop/src/folders/: index.tsx
apps/desktop/src/onboarding/: calendar.tsx  folder-location.tsx
apps/desktop/src/routes/app/: route.tsx
apps/desktop/src/search/advanced/: result-item.tsx
apps/desktop/src/search/components/: search.tsx
apps/desktop/src/session/components/: listen-action.tsx  session-preview-card.tsx
apps/desktop/src/settings/: index.tsx  templates-content.tsx
apps/desktop/src/settings/calendar/: index.tsx
apps/desktop/src/settings/general/: storage.tsx  use-storage-wizard.ts
apps/desktop/src/shared/: main-app-layout.tsx  tabs.tsx
apps/desktop/src/shared/config/: index.ts
apps/desktop/src/shared/main/: header-listen-button.tsx  index.tsx
apps/desktop/src/sidebar/: index.tsx  settings-nav.tsx
apps/desktop/src/sidebar/profile/: index.tsx
apps/desktop/src/stt/: contexts.tsx
apps/web/content/articles/: chatgpt-for-meeting-notes.mdx  company-handbook-in-public.mdx  free-ai-notetakers.mdx  meeting-preparation-checklist.mdx  what-makes-reliable-ai-note-taker.mdx
apps/web/content/changelog/: 1.0.12-nightly.1.mdx
apps/web/src/functions/: github-content.ts
crates/api-client/: openapi.gen.json
crates/api-mail/: Cargo.toml
crates/api-mail/src/: error.rs  lib.rs  openapi.rs
crates/api-mail/src/google/: mod.rs  routes.rs
crates/api-nango/src/: integrations.rs  lib.rs
crates/api-ticket/: Cargo.toml
crates/api-ticket/src/: error.rs  lib.rs  normalize.rs  openapi.rs
crates/api-ticket/src/github/: mod.rs  routes.rs
crates/api-ticket/src/linear/: mod.rs  routes.rs
crates/cactus-model/src/: lib.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: lib.rs  service.rs  storage.rs  sync.rs  sync_calendars.rs
crates/cli-tui/src/: event.rs  screen.rs
crates/db-app/src/: calendars_ops.rs  events_ops.rs
crates/detect/: Cargo.toml
crates/detect/examples/: detector.rs
crates/detect/src/: error.rs  lib.rs  zoom.rs
crates/detect/src/list/: linux.rs  macos.rs  mod.rs
crates/detect/src/mic/: linux.rs
crates/detect/src/mic/macos/: app.rs  device.rs  mod.rs  state.rs
crates/device-monitor/examples/: monitor.rs
crates/device-monitor/src/: lib.rs
crates/export-core/: Cargo.toml
crates/export-core/src/: error.rs  export.rs  lib.rs  types.rs
crates/export-core/src/typst/: compile.rs  content.rs  markdown.rs  mod.rs  utils.rs  world.rs
crates/github-issues/: Cargo.toml
crates/github-issues/src/: client.rs  error.rs  lib.rs  openapi.rs  types.rs
crates/google-mail/: Cargo.toml
crates/google-mail/src/: client.rs  lib.rs  openapi.rs  types.rs
crates/linear/: Cargo.toml
crates/linear/src/: client.rs  error.rs  lib.rs  types.rs
crates/listener2-core/src/batch/: mod.rs
crates/local-model/src/: lib.rs
crates/notification-macos2/examples/: basic.rs
crates/soniox/src/: lib.rs
crates/ticket-interface/: Cargo.toml
crates/ticket-interface/src/: lib.rs
crates/transcribe-proxy/src/: hyprnote_routing.rs
crates/ws-utils/src/: lib.rs
crates/xtask/src/: main.rs  mobile_bridge.rs  prepare_binaries.rs  toml_util.rs
plugins/detect/src/: commands.rs  error.rs  ext.rs
plugins/export/: Cargo.toml  build.rs  package.json
plugins/export/js/: bindings.gen.ts
plugins/export/permissions/: default.toml
plugins/export/permissions/autogenerated/: reference.md
plugins/export/permissions/autogenerated/commands/: export.toml  export_text.toml
plugins/export/permissions/schemas/: schema.json
plugins/export/src/: commands.rs  ext.rs  lib.rs
plugins/local-stt/src/: model.rs
plugins/notification/src/: error.rs
plugins/permissions/src/: ext.rs
plugins/permissions/swift/: check-permissions.swift
plugins/tantivy/src/: ext.rs  lib.rs  query.rs  schema.rs
plugins/tray/src/menu_items/: mod.rs  tray_settings.rs
plugins/updater2/: Cargo.toml
plugins/updater2/js/: bindings.gen.ts
plugins/updater2/src/: error.rs  ext.rs  lib.rs  startup_migration.rs
plugins/windows/js/: bindings.gen.ts
plugins/windows/src/tab/: mod.rs  state.rs
(+62 files in other folders)
