[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-analytics = { workspace = true }
hypr-api-auth = { workspace = true }
hypr-api-cactus = { workspace = true }
hypr-api-calendar = { workspace = true }
hypr-api-env = { workspace = true }
hypr-api-mail = { workspace = true }
hypr-api-nango = { workspace = true }
hypr-api-research = { workspace = true }
hypr-api-subscription = { workspace = true }
hypr-api-support = { workspace = true }
hypr-api-ticket = { workspace = true }
hypr-llm-proxy = { workspace = true }
hypr-observability = { workspace = true }
hypr-transcribe-proxy = { workspace = true }
owhisper-client = { workspace = true }

axum = { workspace = true, features = ["ws"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true, features = ["trace", "cors", "request-id"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

dotenvy = { workspace = true }
envy = { workspace = true }
governor = { workspace = true }
jsonwebtoken = { workspace = true }
sentry = { workspace = true, features = ["tower", "tower-axum-matched-path", "tracing"] }
tower = { workspace = true }
utoipa = { workspace = true }
