[package]
name = "cli"
version = "0.1.0"
edition = "2024"
homepage = "https://char.com"
license = "GPL-3.0"
repository = "https://github.com/fastrepl/char"
description = "Live transcription and audio tools"

[[bin]]
name = "char"
path = "src/main.rs"

[dependencies]
hypr-analytics = { workspace = true }
hypr-api-env = { workspace = true }
hypr-audio = { workspace = true }
hypr-audio-actual = { workspace = true }
hypr-audio-mock = { workspace = true, optional = true }
hypr-audio-utils = { workspace = true }
hypr-calendar = { workspace = true }
hypr-calendar-interface = { workspace = true }
hypr-cli-editor = { workspace = true }
hypr-cli-tui = { workspace = true }
hypr-db-app = { workspace = true }
hypr-db-core2 = { workspace = true }
hypr-file = { workspace = true }
hypr-host = { workspace = true }
hypr-language = { workspace = true }
hypr-listener-core = { workspace = true }
hypr-listener2-core = { workspace = true }
hypr-local-model = { workspace = true }
hypr-local-stt-core = { workspace = true }
hypr-local-stt-server = { workspace = true }
hypr-model-downloader = { workspace = true }
hypr-openrouter = { workspace = true }
hypr-storage = { workspace = true }
hypr-template-cli = { workspace = true }
hypr-transcribe-proxy = { workspace = true }
hypr-transcript = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

apalis = { workspace = true }
apalis-cron = { workspace = true }
async-trait = "0.1"
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { version = "3", features = ["tracing"] }
clap_complete = { workspace = true }
clio = { version = "0.3", features = ["clap-parse"] }
colored = "3"
cron = "0.15"
crossterm = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui = { workspace = true }
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
tachyonfx = { workspace = true }
tempfile = { workspace = true }
textwrap = { version = "0.16", features = ["terminal_size"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-widgets = { version = "0.7.0", features = ["scrollview"] }

open = { workspace = true }
ractor = { workspace = true, features = ["async-trait"] }
reqwest = { workspace = true, features = ["json"] }
rig = { package = "rig-core", version = "0.32" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
strsim = "0.11"
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
hypr-apple-calendar = { workspace = true }

[dev-dependencies]
clap_complete = { workspace = true }
cli-docs = { path = "../../crates/cli-docs" }
clio = { version = "0.3", features = ["clap-parse"] }
strum = { workspace = true, features = ["derive"] }
url = { workspace = true }

[features]
dev = ["dep:hypr-audio-mock"]
