[package]
name = "api-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-auth = { workspace = true }
hypr-api-error = { workspace = true }
hypr-api-nango = { workspace = true }
hypr-google-mail = { workspace = true, features = ["utoipa"] }
hypr-nango = { workspace = true }

axum = { workspace = true }
utoipa = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
