[package]
name = "github-issues"
version = "0.1.0"
edition = "2024"

[features]
default = []
specta = ["dep:specta"]
utoipa = ["dep:utoipa"]

[dependencies]
hypr-http = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, optional = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
